--- a/movieservice/templates/homepage/main.html
+++ b/movieservice/templates/homepage/main.html
@@ -1,21 +1,24 @@
+{% extends 'base_s3.html' %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница</title>
+    {% block title %}
+    Главная страница
+    {% endblock %}
+
+    {% block content %}
     <style>
-        body {
+        main {
             display: flex;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+            flex-direction: row;
+            min-height: calc(100vh - 100px); /* Рассчитываем высоту с учетом футера */        }
 
         /* Левый блок с историей просмотров */
         .sidebar {
             width: 20%;
-            background-color: #f4f4f4;
+            background-color: #dddddd;
             padding: 20px;
             box-shadow: 2px 0 5px rgba(0,0,0,0.1);
             height: 100vh;
@@ -76,7 +79,7 @@
 
         .current-movie-button {
             padding: 15px 30px;
-            background-color: #28a745;
+            background-color: #45885b;
             color: white;
             text-decoration: none;
             font-size: 20px;
@@ -84,7 +87,7 @@
         }
 
         .current-movie-button:hover {
-            background-color: #218838;
+            background-color: #50785d;
         }
     </style>
 </head>
@@ -110,6 +113,7 @@
             Посмотреть текущий фильм
         </a>
     </div>
+    {% endblock %}
 
 </body>
 </html>
