add features that send and accept movie data

--- a/movieservice/templates/player/index.html
+++ b/movieservice/templates/player/index.html
@@ -73,6 +73,7 @@
     <script src="{% static 'player/config.js' %}"></script>
     <script src="{% static 'player/utils.js' %}"></script>
     <script src="{% static 'player/player.js' %}"></script>
+    <script>globalThis.init(JSON.parse("{\"kinopoisk\":\"1309596\",\"title\":\"«Никто» (Nobody, 2021)\"}"));</script>
 </body>
 
 </html>
