--- a/movieservice/templates/base_s3.html
+++ b/movieservice/templates/base_s3.html
@@ -13,7 +13,6 @@
 
     <!-- Блок Иконок во всех браузерах/приложениях-->
     <link rel="shortcut icon" href="{% static 'images/logo-32.png' %}" type="image/x-icon" /> <!-- Иконка в избранном -->
-    <link rel="icon" href="{% static 'images/logo-32.png' %}">  <!-- 32×32  Иконка сверху-->
     <link rel="mask-icon" href="{% static 'images/logo.svg' %}" color="#ffffff">
     <link rel="icon" sizes="48x48" href="{% static 'images/logo-48.png' %}">
     <link rel="icon" sizes="96x96" href="{% static 'images/logo-96.png' %}">
@@ -31,8 +30,8 @@
     <link rel="apple-touch-icon" sizes="152x152" href="{% static 'images/logo152-.png' %}">
     <link rel="apple-touch-icon" sizes="167x167" href="{% static 'images/logo-167.png' %}">
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/logo-180.png' %}">
-    <link rel="mask-icon" href="{% static 'images/logo-32.png' %}" color="#ff0000">
-    <meta name="msapplication-TileColor" content="#ff0000">
+    <link rel="mask-icon" href="{% static 'images/logo-32.png' %}" color="#000000">
+    <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-TileImage" content="{% static 'images/logo-144.png' %}">
 
     <link rel="stylesheet" type="text/css" href="{% static 'base_s2.css' %}">
