--- a/movieservice/templates/base.html
+++ b/movieservice/templates/base.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ru"><html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="ДГИ" />
     {% block meta %}{% endblock %}
-
     <title>{% block title %}{% endblock %}</title>
-    {% load static %}
-
     {% block css %}{% endblock %}
-
     <!-- Блок Иконок во всех браузерах/приложениях-->
     <link rel="shortcut icon" href="{% static 'images/logo-32.png' %}" type="image/x-icon" /> <!-- Иконка в избранном -->
     <link rel="mask-icon" href="{% static 'images/logo.svg' %}" color="#ffffff">
@@ -35,6 +31,7 @@
     <meta name="msapplication-TileImage" content="{% static 'images/logo-144.png' %}">
 
     <link rel="stylesheet" type="text/css" href="{% static 'base_s2.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
