--- a/movieservice/templates/homepage/main.html
+++ b/movieservice/templates/homepage/main.html
@@ -1,4 +1,4 @@
-{% extends 'base_s3.html' %}
+{% extends 'base.html' %}
 
 <!-- Загрузка стиля -->
 {% block css %}
@@ -24,9 +24,9 @@
         <div class="sidebar">
             <h2>История просмотров</h2>
             <ul class="history">
-                <li><a href="#">Фильм 1</a></li>
-                <li><a href="#">Фильм 2</a></li>
-                <li><a href="#">Фильм 3</a></li>
+                {% for movie in movies %}
+                <li><a href="{% url 'hist:set' id=movie.id %}">{{ movie.movie_data.title }}</a></li>
+                {% endfor %}
                 <!-- Добавляйте другие фильмы по мере необходимости -->
             </ul>
             <div class="profile-link">
@@ -36,7 +36,7 @@
 
         <!-- Основной блок: кнопка текущего фильма -->
         <div class="content">
-            <a href="#" class="current-movie-button">
+            <a href="{% url 'hist:last' %}" class="current-movie-button">
                 Посмотреть текущий фильм
             </a>
         </div>
