--- a/movieservice/templates/includes/header.html
+++ b/movieservice/templates/includes/header.html
@@ -1,14 +1,16 @@
 {% load static %}
 <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-  <div class="col-md-3 mb-2 mb-md-0">
+  <div class="col-md-3 mb-0 mb-md-0">
     <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-      <svg class="bi" width="50" height="50"><use xlink:href="#smotrelka"/></svg>
+      <div style="width: 100px; height: 32px; overflow: hidden; vertical-align: middle">
+        <img src="{% static 'images/logo.svg' %}" class="img-fluid" alt="Logo">
+      </div>
     </a>
   </div>
 
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-    <li><a href="#" class="nav-link px-2 {% if view_name == 'homepage:home' %}link-secondary{% endif %}">Home</a></li>
-    <li><a href="#" class="nav-link px-2 {% if view_name == 'homepage:about' %}link-secondary{% endif %}">About</a></li>
+    <li><a href="{% url 'homepage:home' %}" class="nav-link px-2 link-secondary">Home</a></li>
+    <li><a href="{% url 'homepage:about' %}" class="nav-link px-2">About</a></li>
   {% if request.user.is_staff %}
     <li><a class="nav-link px-2" href="{% url 'admin:index' %}" target="_blank">Админка</a></li>
   {% endif %}
