signal of creating profile

--- a/movieservice/static/base_s2.css
+++ b/movieservice/static/base_s2.css
@@ -2,6 +2,9 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
@@ -28,6 +31,7 @@ nav a {
 
 main {
     padding: 20px;
+    flex-grow: 1;
 }
 
 footer {
@@ -35,4 +39,5 @@ footer {
     color: #fff;
     padding: 20px;
     text-align: center;
+    margin-top: auto;
 }
