--- a/movieservice/templates/homepage/about.html
+++ b/movieservice/templates/homepage/about.html
@@ -28,7 +28,7 @@
           <p class="lead">Позволяет смотреть фильмы с онлайн кинотеатров бесплатно. <span class="fw-bold text-body-emphasis">Зарегистрируйтесь</span> для получения функционала сайта!</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           <a href="{% url 'accounts:signup' %}" class="btn btn-primary btn-lg px-4 me-md-2">SignUp</a>
-          <a href="{% url 'accounts:login' %}" class="btn btn-outline-secondary btn-lg px-4">Login</a>
+          <a href="{% url 'login' %}" class="btn btn-outline-secondary btn-lg px-4">Login</a>
         </div>
       </div>
     </div>
