--- a/movieservice/templates/registration/login.html
+++ b/movieservice/templates/registration/login.html
@@ -9,6 +9,6 @@
         {% csrf_token %}
         <p><input type="submit" value="Login"></p>
     </form>
-    <p><a href="{% url 'signup' %}">No account?</a></p>
+    <p><a href="{% url 'accounts:signup' %}">No account?</a></p>
     <p><a href="{% url 'password_reset' %}">Reset Password</a></p>
 {% endblock %}
