--- a/movieservice/templates/homepage/main.html
+++ b/movieservice/templates/homepage/main.html
@@ -19,18 +19,25 @@
 <!-- блок контенента -->
 {% block content %}
     <!-- Левый блок: история просмотров и ссылка на профиль -->
-    <div class="list-group">
+<div class="row">
+    <div class="col-5 list-group">
         <h3>История просмотра</h3>
         {% for movie in movies %}
-            <a href="{% url 'hist:set' id=movie.id %}" class="list-group-item list-group-item-action">{{ movie.movie_data.title }}</a>
+            <a href="{% url 'hist:set' id=movie.id %}" class="list-group-item list-group-item-action">
+                <div class="row">
+                    <h6 class="col-8 mb-1">{{ movie.movie_data.title }}</h6>
+                    <small class="col-4 text-end">{{ movie.time_since_creation }}</small>
+                </div>
+            </a>
         {% empty %}
             <button type="button" class="list-group-item list-group-item-action">Здесь пусто</button>
         {% endfor %}
     </div>
     <!-- Основной блок: кнопка текущего фильма -->
-    <div class="content">
+    <div class="col-7 content">
         <a href="{% url 'hist:last' %}" class="current-movie-button">
             Посмотреть текущий фильм
         </a>
     </div>
+</div>
 {% endblock %}
