--- a/movieservice/templates/player/index.html
+++ b/movieservice/templates/player/index.html
@@ -29,10 +29,10 @@
             <div id="footer">
                 <div>
                     Made with ♥ by <a href="https://github.com/Kirlovon" target="_blank">Kirlovon</a>.
-                    Powered by <a href="https://github.com/Kirlovon/Tape-Operator" target="_blank">Tape Operator</a>.
+                    Modified by <a href="https://github.com/RichCake/movieservice" target="_blank">Movieservice Team</a>.
                 </div>
                 <div>
-                    <a href="https://github.com/Kirlovon/Tape-Operator/issues" target="_blank">Bug Report ↗</a>
+                    <a href="https://github.com/RichCake/movieservice/issues" target="_blank">Bug Report ↗</a>
                     <span id="version"></span>
                 </div>
             </div>
@@ -46,7 +46,7 @@
     <template id="initialization-error-message">
         <div class="message error">
             <p>
-                Произошла ошибка во время инициализации плеера. Проверьте консоль разработчика и сообщите об ошибке по <a href="https://github.com/Kirlovon/Tape-Operator/issues" target="_blank">этой ссылке ↗</a>.
+                Произошла ошибка во время инициализации плеера. Проверьте консоль разработчика и сообщите об ошибке по <a href="https://github.com/RichCake/movieservice/issues" target="_blank">этой ссылке ↗</a>.
                 Я постараюсь быстро все исправить! 🙂
             </p>
         </div>
@@ -55,7 +55,7 @@
     <template id="script-error-message">
         <div class="message error">
             <p>
-                Похоже что плеер так и не был инициализирован. Проверьте, установлена ли у вас актуальная версия скрипта <a href="https://github.com/Kirlovon/Tape-Operator">Tape Operator ↗</a>.
+                Похоже что плеер так и не был инициализирован. Проверьте, установлена ли у вас актуальная версия скрипта <a href="https://github.com/RichCake/movieservice">Movieservice ↗</a>.
             </p>
         </div>
     </template>
@@ -64,7 +64,7 @@
         <div class="message warning">
             <p>
                 Похоже, что у вас установлена устаревшая версия скрипта - <b class="script-version"></b>.
-                Рекомендуем обновить скрипт, перейдя по <a href="https://github.com/Kirlovon/Tape-Operator/raw/main/userscript/tape-operator.user.js" target="_blank">этой ссылке ↗</a>.
+                Рекомендуем обновить скрипт, перейдя по <a href="https://github.com/RichCake/movieservice/issues" target="_blank">этой ссылке ↗</a>.
             </p>
         </div>
     </template>
