--- a/movieservice/templates/base.html
+++ b/movieservice/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="ru">
+<html lang="ru"  data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="ДГИ" />
@@ -31,7 +31,9 @@
     <meta name="msapplication-TileImage" content="{% static 'images/logo-144.png' %}">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
+      /* Стиль для иконок */
       .bi {
         vertical-align: -.125em;
         fill: currentColor;
