--- a/movieservice/templates/homepage/about.html
+++ b/movieservice/templates/homepage/about.html
@@ -3,7 +3,6 @@
 
 <!-- Загрузка стиля -->
 {% block css %}
-<link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
 {% endblock %}
 <!-- блок метаданных -->
 {% block meta %}
@@ -22,10 +21,10 @@
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
         <img src="{% static 'images/logo.svg' %}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-      </div>
+    </div>
       <div class="col-lg-6">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Смотрелка</h1>
-          <p class="lead">Позволяет смотреть фильмы с онлайн кинотеатров бесплатно. <span class="fw-bold text-body-emphasis">Зарегистрируйтесь</span> для получения функционала сайта!</p>
+        <h1 class="display-5 fw-bold lh-1 mb-3 text-body-emphasis">Смотрелка</h1>
+          <p class="lead">Позволяет смотреть фильмы с онлайн кинотеатров бесплатно. <span class="fw-bold text-white">Зарегистрируйтесь</span> для получения функционала сайта!</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           <a href="{% url 'accounts:signup' %}" class="btn btn-primary btn-lg px-4 me-md-2">SignUp</a>
           <a href="{% url 'login' %}" class="btn btn-outline-secondary btn-lg px-4">Login</a>
