--- a/movieservice/templates/base.html
+++ b/movieservice/templates/base.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 
-<body>
+<body class="history-hidden">
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
       <symbol id="bootstrap" viewBox="0 0 118 94">
         <title>Bootstrap</title>
