--- a/movieservice/templates/includes/header.html
+++ b/movieservice/templates/includes/header.html
@@ -11,9 +11,9 @@
     {% if request.user.is_staff %}
       <li><a href="{% url 'homepage:home' %}" class="nav-link px-2 link-secondary">Home</a></li>
     {% endif %}
-      <li><a href="{% url 'homepage:about' %}" class="nav-link px-2">About</a></li>
+      <li><a href="{% url 'homepage:about' %}" class="nav-link px-2 text-white">About</a></li>
     {% if request.user.is_staff %}
-      <li><a class="nav-link px-2" href="{% url 'admin:index' %}" target="_blank">Админка</a></li>
+      <li><a class="nav-link px-2 text-white" href="{% url 'admin:index' %}" target="_blank">Админка</a></li>
     {% endif %}
     </ul>
 
@@ -21,11 +21,11 @@
         {% if request.user.is_authenticated %}
       <form action="{% url 'logout' %}" method="post">
         {% csrf_token %}
-        <a onclick="parentNode.submit();" class="btn btn-outline-primary me-2">Logout</a>
+        <a onclick="parentNode.submit();" class="btn btn-outline-light me-2">Logout</a>
       </form>
         {% else %}
-          <a href="/login" class="btn btn-outline-primary me-2">Login</a>
-          <a href="{% url 'accounts:signup' %}" class="btn btn-primary">Sign-up</a>
+          <a href="/login" class="btn btn-outline-light me-2">Login</a>
+          <a href="{% url 'accounts:signup' %}" class="btn btn-light">Sign-up</a>
         {% endif %}
     </div>
   </header>
