--- a/movieservice/templates/includes/footer.html
+++ b/movieservice/templates/includes/footer.html
@@ -1,15 +1,18 @@
 {% load static %}
-<div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-          </a>
-          <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 SMOTRELKA TEAM</span>
+<footer class="footer fixed-bottom d-flex flex-wrap justify-content-between align-items-center py-3 border-top mb-3">
+    <div class="container d-flex justify-content-between align-items-center">
+        <div class="d-flex align-items-center">
+            <a href="/" class="me-2 text-body-secondary text-decoration-none lh-1">
+                <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+            </a>
+            <span class="text-body-secondary">&copy; 2024 SMOTRELKA TEAM</span>
         </div>
-
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3"><a class="text-body-secondary" href="https://t.me/smotrelka_space"><svg class="bi" width="24" height="24"><use xlink:href="#telegram"/></svg></a></li>
+        <ul class="nav list-unstyled d-flex mb-0">
+            <li class="ms-3">
+                <a class="text-body-secondary" href="https://t.me/smotrelka_space">
+                    <svg class="bi" width="24" height="24"><use xlink:href="#telegram"/></svg>
+                </a>
+            </li>
         </ul>
-    </footer>
-</div>
+    </div>
+</footer>
