add info message on startup and update userscript

--- a/movieservice/templates/base.html
+++ b/movieservice/templates/base.html
@@ -81,6 +81,13 @@
             </p>
         </div>
     </template>
+    <template id="please-waite-message">
+        <div class="message warning">
+            <p>
+                Фильм загружается...
+            </p>
+        </div>
+    </template>
 {% block scripts %}{% endblock %}
 </body>
 </html>
