--- a/movieservice/templates/base.html
+++ b/movieservice/templates/base.html
@@ -8,6 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
     {% block css %}{% endblock %}
     <!-- Блок Иконок во всех браузерах/приложениях-->
+    <link rel="stylesheet" href="{% static 'main.css' %}">
     <link rel="shortcut icon" href="{% static 'images/logo-32.png' %}" type="image/x-icon" /> <!-- Иконка в избранном -->
     <link rel="mask-icon" href="{% static 'images/logo.svg' %}" color="#ffffff">
     <link rel="icon" sizes="48x48" href="{% static 'images/logo-48.png' %}">
