--- a/movieservice/templates/registration/login.html
+++ b/movieservice/templates/registration/login.html
@@ -3,12 +3,14 @@
 {% block title %} Login {% endblock %}
 
 {% block content %}
-    <h2> Login </h2>
-    <form method="post">
-        {{ form.as_p }}
-        {% csrf_token %}
-        <p><input type="submit" value="Login"></p>
-    </form>
-    <p><a href="{% url 'accounts:signup' %}">No account?</a></p>
-    <p><a href="{% url 'password_reset' %}">Reset Password</a></p>
+    <div class="login-container">
+        <h2>Вход</h2>
+        <form method="post" class="login-form">
+            {{ form.as_p }}
+            {% csrf_token %}
+            <p><input type="submit" value="Войти" class="btn btn-primary btn-lg px-4 me-md-2"></p>
+        </form>
+        <p class="links"><a href="{% url 'accounts:signup' %}">Нет аккаунта?</a></p>
+        <p class="links"><a href="{% url 'password_reset' %}">Сбросить пароль</a></p>
+    </div>
 {% endblock %}
