--- a/movieservice/templates/registration/signup.html
+++ b/movieservice/templates/registration/signup.html
@@ -3,28 +3,41 @@
 {% block title %} Sign Up {% endblock %}
 
 {% block content %}
-    <h2> Sign Up </h2>
+    <div class="signup-container">
+        <h2>Регистрация</h2>
 
-    {% if form.errors %}
-        <div style="display: table; margin: 0 auto; text-align: left;">
+        {% if form.errors %}
+            <div class="error-container">
+                {% for key, value in form.errors.items %}
+                    <strong>{{ value }}</strong>
+                {% endfor %}
+            </div>
+        {% endif %}
 
-            {% for key, value in form.errors.items %}
-                <strong>{{ value }}</strong>
-            {% endfor %}
-        </div>
-    {% endif %}
+        <form method="post" class="signup-form">
+    {% csrf_token %}
 
-    <form method="post">
-        {% csrf_token %}
+    <label for="username">Имя пользователя:</label>
+    <input type="text" name="username" id="username">
 
-        <p>Username: {{ form.username }}</p>
-        <p>Email: {{ form.email }}</p>
-        <p>First Name: {{ form.first_name }}</p>
-        <p>Last Name: {{ form.last_name }}</p>
-        <p>Password: {{ form.password1 }}</p>
-        <p>Confirm Password: {{ form.password2 }}</p>
-        <button type="submit">Sign Up</button>
-    </form>
+    <label for="email">Email:</label>
+    <input type="email" name="email" id="email">
 
-    <a href="{% url 'login' %}">Have an account? Go to Log In</a>
+    <label for="first_name">Имя:</label>
+    <input type="text" name="first_name" id="first_name">
+
+    <label for="last_name">Фамилия:</label>
+    <input type="text" name="last_name" id="last_name">
+
+    <label for="password1">Пароль:</label>
+    <input type="password" name="password1" id="password1">
+
+    <label for="password2">Подтвердите пароль:</label>
+    <input type="password" name="password2" id="password2">
+
+    <button type="submit" class="btn btn-primary btn-lg px-4 me-md-2">Зарегистрироваться</button>
+</form>
+
+        <p class="links"><a href="{% url 'login' %}">Уже есть аккаунт? Войти</a></p>
+    </div>
 {% endblock %}
